# mcp-excel

./: .gitignore  README.md  pyproject.toml  test_manual.py
.github/: FUNDING.yml
docs/: MCP_SETUP.md
docs/es/: README.md
docs/ja/: README.md
docs/pt/: README.md
docs/ru/: ARCHITECTURE.md  README.md
docs/zh/: README.md
src/mcp_excel/: __init__.py  main.py
src/mcp_excel/core/: __init__.py  cache.py  datetime_converter.py  datetime_detector.py  file_loader.py  header_detector.py
src/mcp_excel/excel/: __init__.py  formula_generator.py  tsv_formatter.py
src/mcp_excel/models/: requests.py  responses.py
src/mcp_excel/operations/: __init__.py  advanced.py  base.py  data_operations.py  filtering.py  inspection.py  statistics.py  timeseries.py  validation.py
tests/: README.md  conftest.py  test_smoke.py
tests/builders/: generate_fixtures.py
tests/fixtures/: registry.py
tests/fixtures/basic/: multi_sheet.xlsx  numeric_types.xlsx  simple.xlsx  with_dates.xlsx
tests/fixtures/edge_cases/: complex_formatting.xlsx  mixed_languages.xlsx  wide_table.xlsx  (+5 more)
tests/integration/: test_advanced.py  test_aggregation.py  test_data_retrieval.py  test_edge_cases.py  test_error_handling.py  test_file_inspection.py  test_filtering_and_counting.py  test_multisheet.py  test_statistics.py  test_timeseries.py  test_validation.py
tests/smoke/: conftest.py  test_smoke_advanced.py  test_smoke_aggregation.py  test_smoke_basic.py  test_smoke_data_retrieval.py  test_smoke_filtering.py  test_smoke_inspection.py  test_smoke_stats_validation_multisheet.py  test_smoke_timeseries.py
(+13 files in other folders)
