[tool.poetry]
name = "mcp-excel"
version = "0.1.0"
description = "MCP server for Excel file operations using atomic primitives"
authors = ["Jwadow"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "mcp_excel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.1.0"
pandas = "^2.2.0"
pydantic = "^2.10.0"
xlrd = "^2.0.1"
openpyxl = "^3.1.0"
psutil = "^6.1.0"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^4.1.0"
black = "^24.10.0"
mypy = "^1.14.0"
ruff = "^0.8.0"
pandas-stubs = "^2.2.0"
xlwt = "^1.3.0"

[tool.poetry.scripts]
mcp-excel = "mcp_excel.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
